--- a/Talks.html
+++ b/Talks.html
@@ -25,8 +25,8 @@
     <ol reversed>
     <li> The XXIX International Conference on Neutrino Physics and Astrophysics (Neutrino 2020,
 June-July 2020)
-      Chicago, Illinois USA (Online conference due to COVID-19)
-      Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions </li>
+      <br>Chicago, Illinois USA (Online conference due to COVID-19)
+      <br>Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions </li>
     <li> The Seventh Dark Matter@LHC 2020 Workshop (DM@LHC, June 2020)
 DESY, Hamburg, Germany (Online conference due to COVID-19)
 Plenary talk: Probing the real triplet scalar dark matter at colliders </li>
