--- a/Talks.html
+++ b/Talks.html
@@ -31,8 +31,8 @@ June-July 2020)
       <br>DESY, Hamburg, Germany (Online conference due to COVID-19)
       <br>Plenary talk: Probing the real triplet scalar dark matter at colliders </li>
     <li> The Seventh Workshop of the LHC LLP Community (LHC LLP, May 2020)
-CERN (Online conference due to COVID-19)
-Plenary talk: Collider probes of real triplet scalar dark matter </li>
+      <br>CERN (Online conference due to COVID-19)
+      <br>Plenary talk: Collider probes of real triplet scalar dark matter </li>
     <li> The Eighth Annual Large Hadron Collider Physics (LHCP2020, May 2020)
       <br>International Conference Centre of Sorbonne Universite, Paris, France (Online conference due
 to COVID-19)
