--- a/Poems.html
+++ b/Poems.html
@@ -21,7 +21,7 @@
   
   <div>
     <h1> Poems I composed </h1>
-    <p> Occasionally, I compose poems. My favorite poets including <a href="https://en.wikipedia.org/wiki/Li_Qingzhao">Li Qingzhao</a>, <a href="https://en.wikipedia.org/wiki/Liu_Yong_(Song_dynasty)">Liu Yong</a>, <a href="https://en.wikipedia.org/wiki/Li_Yu_(Southern_Tang)"> Li Yu</a> and <a href="https://zh.wikipedia.org/wiki/%E6%99%8F%E5%87%A0%E9%81%93">Yan Jidao</a>.</p>
+    <p> Occasionally, I compose poems. My favorite poets are <a href="https://en.wikipedia.org/wiki/Li_Qingzhao">Li Qingzhao</a>, <a href="https://en.wikipedia.org/wiki/Liu_Yong_(Song_dynasty)">Liu Yong</a>, <a href="https://en.wikipedia.org/wiki/Li_Yu_(Southern_Tang)"> Li Yu</a> and <a href="https://zh.wikipedia.org/wiki/%E6%99%8F%E5%87%A0%E9%81%93">Yan Jidao</a>.</p>
     <!--     x     -->
     <ol reversed>
       <li> </li>
