--- a/Talks.html
+++ b/Talks.html
@@ -14,6 +14,7 @@
         <li><a class="#main" href="index.html">Home</a></li>
         <li><a class="#main" href="CV.html">CV</a></li>
         <li><a class="#main" href="Publications.html">Publications</a></li>
+        <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="active" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
       </ul>
