add 'back to top' feature and the 'search function'.

--- a/CV.html
+++ b/CV.html
@@ -17,8 +17,17 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
+        <input type="text" placeholder="Search..">
+        <!-- <div class="searchbar">
+          <form>
+            <input name="q" id="search-bar" type="search" placeholder="Type to Search">
+            <input id="search-button" type="submit" value="Find">
+          </form>
+        </div> -->
       </ul>
   </navbar>
+  
+  <button onclick="topFunction()" id="topbutton" title="Go to top">Back to top</button>
   
   <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a>.</p>
   
@@ -59,8 +68,9 @@ Science, 2019-2020</li>
     <li>Mandarin (native.)</li>
 
   </div>
-  
-    
 
+<!-- back to top button -->
+<script src="js/main.js"></script>
+  
 </body>
 </html>
