--- a/LatestResults.html
+++ b/LatestResults.html
@@ -17,9 +17,12 @@
         <li><a class="active" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
+        <input type="text" placeholder="Search..">
         
       </ul>
   </navbar>
+
+  <button onclick="topFunction()" id="topbutton" title="Go to top">Back to top</button>
   
   <div>
     <h1> Latest Results </h1>
@@ -29,6 +32,8 @@
     </ol>
   </div>
     
+  <!-- back to top button -->
+  <script src="js/main.js"></script>
 
 </body>
 </html>
