--- a/Publications.html
+++ b/Publications.html
@@ -17,8 +17,11 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
+        <input type="text" placeholder="Search..">
       </ul>
   </navbar>
+
+  <button onclick="topFunction()" id="topbutton" title="Go to top">Back to top</button>
   
   <div>
     <h1> Publications </h1>
@@ -31,7 +34,9 @@
       <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://link.springer.com/article/10.1007\%2FJHEP01\%282019\%29101" target="_blank">Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination</a>, JHEP 1901 (2019) 101. </li>
     </ol>
   </div>
-    
+
+  <!-- back to top button -->
+  <script src="js/main.js"></script>
 
 </body>
 </html>
