--- a/Talks.html
+++ b/Talks.html
@@ -17,8 +17,11 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="active" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
+        <input type="text" placeholder="Search..">
       </ul>
   </navbar>
+
+  <button onclick="topFunction()" id="topbutton" title="Go to top">Back to top</button>
   
   <div>
     <h1> Talks </h1>
@@ -60,6 +63,8 @@ scalar dark matter </li>
     </ol>
   </div>
   
+  <!-- back to top button -->
+  <script src="js/main.js"></script>
     
 
 </body>
