--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
+        <input type="text" placeholder="Search..">
       </ul>
   </navbar>
+
+  <button onclick="topFunction()" id="topbutton" title="Go to top">Back to top</button>
   
   <div >
   
@@ -70,7 +73,8 @@
     
     </div>
   
-    
+    <!-- back to top button -->
+    <script src="js/main.js"></script>
 
 </body>
 </html>
