--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
-        <input type="text" placeholder="Search..">
+        <!-- <input type="text" placeholder="Search.."> -->
+        <input type="submit" value="search" placeholder="Search..">
       </ul>
   </navbar>
 
@@ -27,10 +28,12 @@
   
   <h1>About me</h1>
   <p>
-       I am a PhD student in physics at the <a href="https://www.physics.umass.edu/acfi/">
+       I am a PhD student in physics at the <a
+	       href="https://www.physics.umass.edu/acfi/" target="_blank">
        Amherst Center for Fundamental Interactions</a> at the University of Massachusetts-Amherst. My thesis advisor
-       is <a href="http://people.umass.edu/mjrm/">Michael J. Ramsey-Musolf</a> and my academic advisor is
-       <a href="https://www.physics.umass.edu/people/jennie-traschen">Jennie Traschen</a>.
+       is <a href="http://people.umass.edu/mjrm/" target="_blank">Michael J. Ramsey-Musolf</a> and my academic advisor is
+       <a href="https://www.physics.umass.edu/people/jennie-traschen"
+       target="_blank">Jennie Traschen</a>.
   </p>
   
   <h1>Contact information</h1>
