--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Poems.html">Poems</a></li>
-        <!-- <input type="text" placeholder="Search.."> -->
-        <input type="submit" value="search" placeholder="Search..">
+        <input type="text" placeholder="Search..">
+        <!-- <input type="submit" value="search" placeholder="Search.."> -->
       </ul>
   </navbar>
 
