revise research interest

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   <h1>Research interest</h1>
   <p>
     <li> Dark Matter: I am very interested in dark matter at different mass scales and its detection through direct and indirect detection as well as its searches at colliders.</li>
-    <li> Neutrino properties: I am also very interested neutrino physics. </li>
-    <li> Collider physics: I am also very interested collider physics. </li>
-    <li> Multi-loop electroweak radiative corrections: I am also very interested loop calculations.</li>
+    <li> Neutrino properties. <!-- : I am also very interested neutrino physics.--> </li>
+    <li> Collider physics. <!-- : I am also very interested collider physics.--> </li>
+    <li> Multi-loop electroweak radiative corrections. <!-- : I am also very interested loop calculations. --> </li>
   </p>
     
   <h1>Research Experience</h1>
