update research interests more formally.

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     
   <h1>Research interest</h1>
   <p>
-    <li> Dark Matter: I am very interested in dark matter at different mass scales and its detection through direct and indirect detection as well as its searches at colliders.</li>
-    <li> Neutrino properties. <!-- : I am also very interested neutrino physics.--> </li>
-    <li> Collider physics. <!-- : I am also very interested collider physics.--> </li>
-    <li> Multi-loop electroweak radiative corrections. <!-- : I am also very interested loop calculations. --> </li>
+    <li> Dark Matter: Dark matter at different mass scales and its detection through various methods.</li>
+    <li> Neutrino physics/properties: Including the interplay between neutrinos and dark matter in the early Universe, neutrino non-standard interactions, using neutrinos as a probe of precision measurements etc. </li>
+    <li> Collider physics: Including phenomenologies of BSM physics at current and future colliders, precision measurements of the SM parameters, etc  </li>
+    <li> Multi-loop electroweak radiative corrections.</li>
   </p>
     
   <h1>Research Experience</h1>
@@ -62,7 +62,7 @@
     <li><b>Collider related projects:</b>
       <ul>
         <li>
-          We studied in detail the decay patterns of all BSM Higgs particles in the complex Higgs triplet model, as well as their production cross sections at the 100TeV future circular collider, the promising discovery channels of the model and the channels that are related to model parameters involved in baryogenesis. Our result will appear on arXiv shortly.
+          We studied in detail the decay patterns of all BSM Higgs particles in the complex Higgs triplet model, as well as their production cross sections at the 100TeV future circular collider, the promising discovery channels of the model and the channels that are related to model parameters involved in baryogenesis.
         </li>
       </ul>
     </li>
