--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     
   <h1>Research interest</h1>
   <p>
-    <li> Dark Matter: Dark matter at different mass scales and its detection through various methods.</li>
-    <li> Neutrino physics/properties: Including the interplay between neutrinos and dark matter in the early Universe, neutrino non-standard interactions, using neutrinos as a probe of precision measurements etc. </li>
-    <li> Collider physics: Including phenomenologies of BSM physics at current and future colliders, precision measurements of the SM parameters, etc  </li>
-    <li> Multi-loop electroweak radiative corrections.</li>
+    <li> <b>Dark Matter</b>: Dark matter at different mass scales and its detection through various methods.</li>
+    <li> <b>Neutrino physics/properties</b>: Including the interplay between neutrinos and dark matter in the early Universe, neutrino non-standard interactions, using neutrinos as a probe of precision measurements etc. </li>
+    <li> <b>Collider physics</b>: Including phenomenologies of BSM physics at current and future colliders, precision measurements of the SM parameters, etc  </li>
+    <li> <b>Multi-loop electroweak radiative corrections</b>.</li>
   </p>
     
   <h1>Research Experience</h1>
