add LatestResults content.

--- a/LatestResults.html
+++ b/LatestResults.html
@@ -28,7 +28,31 @@
     <h1> Latest Results </h1>
     <!--     x     -->
     <ol reversed>
-      <li>  </li>
+      <li> <b>Recent work on the interplay between neutrinos and dark matter in the early Universe</b>: <a href="https://arxiv.org/abs/2005.01717" target="_blank"> Freezing-in Dark Matter from Secret Neutrino Interactions </a></li>
+	<ul>
+		<li><b>Key points:</b></li><br>
+			<ul><li>We invent a model with dark sector that only contains a fermionic dark matter and a light scalar mediator. The dark scalar talks with the SM <font color="red"> <i>only</i> </font> through the light scalar mediator through its interactions with SM neutrinos.</li>
+			<li>We find that our model is <font color="red"> <i>in tension</i> </font> with experimental constraints while trying to solve the small-scale structure problems and dark matter indirect detection at Super-K <font color="red"> <i>simultaneously</i></font>.</li> </ul>
+
+		<li><b>Key plots:</b></li><br>
+			<IMG STYLE="TOP:35px; LEFT:370px; WIDTH:300px; HEIGHT:300px; float: left;", alt="" SRC="figs/LatestResultFig/SSS.pdf">
+			<IMG STYLE="TOP:35px; LEFT:370px; WIDTH:300px; HEIGHT:300px; float: right;", alt="" SRC="figs/LatestResultFig/DMID.pdf">
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<ul><li>Left plot: Benchmark points that can solve the small-scale structure problems.</li></ul>
+			<ul><li>Right plot: Parameter space that survives from dark matter indirect detection.</li></ul>
+      </ul>
     </ol>
   </div>
     
