update figures in LatestResults

--- a/LatestResults.html
+++ b/LatestResults.html
@@ -35,8 +35,8 @@
 			<li>We find that our model is <font color="red"> <i>in tension</i> </font> with experimental constraints while trying to solve the small-scale structure problems and dark matter indirect detection at Super-K <font color="red"> <i>simultaneously</i></font>.</li> </ul>
 
 		<li><b>Key plots:</b></li><br>
-			<IMG STYLE="TOP:35px; LEFT:370px; WIDTH:300px; HEIGHT:300px; float: left;", alt="" SRC="figs/LatestResultFig/SSS.pdf">
-			<IMG STYLE="TOP:35px; LEFT:370px; WIDTH:300px; HEIGHT:300px; float: right;", alt="" SRC="figs/LatestResultFig/DMID.pdf">
+			<embed src="figs/LatestResultFig/SSS.pdf" width="340px" height="400px">
+			<embed src="figs/LatestResultFig/DMID.pdf" width="340px" height="400px"> <!-- embed works the best -->
 			<br>
 			<br>
 			<br>
