big update on index.html

--- a/CV.html
+++ b/CV.html
@@ -5,7 +5,8 @@
   Yong Du (杜勇) | CV
 </title>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="icon" href="icon/favicon.png">
 </head>
 <body>
   
