--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<br>
 	<br>
 	<br>
-	<img src="figs/me2.jpg" class="center" >
+	<img src="figs/me2.jpg" class="center" alt="">
 	<p>
 		<center>Email: <a href="mailto:yongdu@umass.edu">yongdu@umass.edu</a></center>
 	</p>
