fix image file extension: img element is case sensitive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<br>
 	<br>
 	<br>
-	<img src="figs/me2.jpg" class="center" alt="">
+	<img src="figs/me2.JPG" class="center" alt=""> <!-- image element is case sensitive -->
 	<p>
 		<center>Email: <a href="mailto:yongdu@umass.edu">yongdu@umass.edu</a></center>
 	</p>
