--- a/Publications.html
+++ b/Publications.html
@@ -32,11 +32,11 @@
     <h1> Publications </h1>
     <!--     x     -->
     <ol reversed>
-      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://arxiv.org/abs/2005.01717" target="_blank"> Freezing-in Dark Matter from Secret Neutrino Interactions </a>, arXiv:2005.01717 </li>
-      <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/2003.07867" target="_blank"> Collider Probes of Real Triplet Scalar Dark Matter </a>, arXiv:2003.07867 </li>
-      <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank">Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops</a>, arXiv:1912.08220
+      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://arxiv.org/abs/2005.01717" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>arXiv:2005.01717 </li>
+      <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/2003.07867" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>arXiv:2003.07867 </li>
+      <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>arXiv:1912.08220
  </li>
-      <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://link.springer.com/article/10.1007\%2FJHEP01\%282019\%29101" target="_blank">Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination</a>, JHEP 1901 (2019) 101. </li>
+      <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://link.springer.com/article/10.1007\%2FJHEP01\%282019\%29101" target="_blank"><br>Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination,</a><br>JHEP 1901 (2019) 101. </li>
     </ol>
   </div>
 
