fix type-ii paper link to JHEP

--- a/Publications.html
+++ b/Publications.html
@@ -36,7 +36,7 @@
       <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/2003.07867" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>arXiv:2003.07867 </li>
       <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>arXiv:1912.08220
  </li>
-      <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://link.springer.com/article/10.1007\%2FJHEP01\%282019\%29101" target="_blank"><br>Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination,</a><br>JHEP 1901 (2019) 101. </li>
+      <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://link.springer.com/article/10.1007%2FJHEP01%282019%29101" target="_blank"><br>Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination,</a><br>JHEP 1901 (2019) 101. </li>
     </ol>
   </div>
 
