--- a/CV.html
+++ b/CV.html
@@ -17,7 +17,7 @@
         <li><a class="#main" href="Publications.html">Publications</a></li>
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
-        <li><a class="#main" href="Poems.html">Poems</a></li>
+        <li><a class="#main" href="Miscellaneous.html">Miscellaneous</a></li>
         <input type="text" placeholder="Search..">
         <!-- <div class="searchbar">
           <form>
