--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" name="viewport" content="initial-scale=1, maximum-scale=1; text/html; charset=utf-8">
 <html>
 <title>
-  Yong Du (杜勇) | Poems
+  Yong Du (杜勇) | Miscellaneous
 </title>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -17,7 +17,7 @@
         <li><a class="#main" href="Publications.html">Publications</a></li>
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
-        <li><a class="active" href="Poems.html">Poems</a></li>
+        <li><a class="active" href="Miscellaneous.html">Miscellaneous</a></li>
         <input type="text" placeholder="Search..">
       </ul>
   </navbar>
@@ -35,6 +35,8 @@
     <ol reversed>
       <li> </li>
     </ol>
+
+    <h1> Happy family time </h1>
   </div>
     
   <!-- back to top button -->
