revise search bar and miscellaneous page

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -18,7 +18,8 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="active" href="Miscellaneous.html">Miscellaneous</a></li>
-        <input type="text" placeholder="Search..">
+        <input type="text" placeholder="Search.." placeholder="Search..">
+        <!-- <input type="submit" value="search" placeholder="Search.."> -->
       </ul>
   </navbar>
 
@@ -29,18 +30,28 @@
  	<br>
 	<br>
 
-    <h1> Poems I composed </h1>
-    <p> Occasionally, I compose poems. My favorite poets are <a href="https://en.wikipedia.org/wiki/Li_Qingzhao" target="_blank">Li Qingzhao</a>, <a href="https://en.wikipedia.org/wiki/Liu_Yong_(Song_dynasty)" target="_blank">Liu Yong</a>, <a href="https://en.wikipedia.org/wiki/Li_Yu_(Southern_Tang)" target="_blank"> Li Yu</a> and <a href="https://zh.wikipedia.org/wiki/%E6%99%8F%E5%87%A0%E9%81%93" target="_blank">Yan Jidao</a>.</p>
+    <!--     <h1> Poems I composed </h1>
+    <p> Occasionally, I compose poems. My favorite poets are <a href="https://en.wikipedia.org/wiki/Li_Qingzhao" target="_blank">Li Qingzhao</a>, <a href="https://en.wikipedia.org/wiki/Liu_Yong_(Song_dynasty)" target="_blank">Liu Yong</a>, <a href="https://en.wikipedia.org/wiki/Li_Yu_(Southern_Tang)" target="_blank"> Li Yu</a> and <a href="https://zh.wikipedia.org/wiki/%E6%99%8F%E5%87%A0%E9%81%93" target="_blank">Yan Jidao</a>.</p> -->
     <!--     x     -->
-    <ol reversed>
+    <!--      <ol reversed> 
       <li> </li>
-    </ol>
+    </ol> -->
 
-    <h1> Happy family time </h1>
+    <!--     <h1> Happy family time </h1> -->
+
+	
+	<h3> Useful links </h3>
+	<a href="https://arxiv.org/" target="_blank">arXiv</a>
+
+
+
+
+
   </div>
     
   <!-- back to top button -->
   <script src="js/main.js"></script>
+
 
 </body>
 </html>
