--- a/Talks.html
+++ b/Talks.html
@@ -18,7 +18,8 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="active" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Miscellaneous.html">Miscellaneous</a></li>
-        <input type="text" placeholder="Search..">
+        <input type="text" placeholder="Search.." placeholder="Search..">
+        <!-- <input type="submit" value="search" placeholder="Search.."> -->
       </ul>
   </navbar>
 
