--- a/Publications.html
+++ b/Publications.html
@@ -30,7 +30,7 @@
  	<br>
 	<br>
 
-    <h1> Publications </h1>
+    <h1> Publications </h1> (My <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> page)
     <!--     x     -->
     <ol reversed>
       <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://arxiv.org/abs/2005.01717" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>arXiv:2005.01717 </li>
