update useful links in Miscellaneous

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -41,7 +41,13 @@
 
 	
 	<h3> Useful links </h3>
-	<a href="https://arxiv.org/" target="_blank">arXiv</a>
+	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="PDG http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>
+
+
+
+
+
+
 
 
 
