--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<br>
 	<img src="figs/me2.JPG" class="center" alt=""> <!-- image element is case sensitive -->
 	<p>
-		<center>Email: <a href="mailto:yongdu@umass.edu">yongdu@umass.edu</a> and <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> page</center>
+		<center>Email: <a href="mailto:yongdu@umass.edu">yongdu@umass.edu</a> and <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> author page</center>
 	</p>
 
 	<p>
