update useful links on Miscellaneous page

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -42,6 +42,42 @@
 	
 	<h3> Useful links </h3>
 	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>
+	
+	<h3> Dark matter related packages: </h3>
+	<a href="http://www.darksusy.org/" target="_blank">DarkSUSY</a>  |  <a href="https://lapth.cnrs.fr/micromegas/" target="_blank">MicrOMEGAs</a>  |  <a href="http://pisrv0.pit.physik.uni-tuebingen.de/darkmatter/" target="_blank">DAMNED</a>  |  <a href="http://dmtools.brown.edu/" target="_blank">DMTOOLS</a>  |  <a href="http://lpsc.in2p3.fr/mayet/dm.php" target="_blank">Dark Matter Portals</a>  |  <a href="http://www.taup-conference.to.infn.it/" target="_blank">TAUP</a>  |  <a href="https://indico.fnal.gov/event/13702/overview" target="_blank">US cosmic visions</a>
+
+	<h3> Python in HEP </h3>
+	<a href="https://indico.cern.ch/event/882824/overview" target="_blank">PyHEP</a>  |  <a href="https://www.scipy2020.scipy.org/schedule" target="_blank">SciPy2020</a>
+
+	<h3> Loop tools </h3>
+	<ul>
+	<li>Feynman Integral reduction tools:</li>
+	<a href="http://www.inp.nsk.su/~lee/programs/LiteRed/" target="_blank">LiteRed</a>  |  <a href="https://reduze.hepforge.org/" target="_blank">Reduze</a>  |  <a href="https://bitbucket.org/feynmanIntegrals/fire/src/master/" target="_blank">FIRE</a>  |  <a href="https://arxiv.org/pdf/hep-ph/0404258.pdf" target="_blank">AIR</a>  |  <a href="https://library.wolfram.com/infocenter/MathSource/606/" target="_blank">TARCER</a>
+	</ul>
+
+
+
+
+	
+
+
+
+
+
+
+
+	
+	
+	<!--
+	<h3> Other topics </h3>	
+	<ul>
+		<li>Why scratching alleviates the itch? See this article published in Nature Neuroscience in 2014: <a href="https://www.nature.com/articles/nn.3619" target="_blank">Why we scratch an itch: the molecules, cells and circuits of itch</a> and this article published in Journal of Neurophysiology: <a href="https://journals.physiology.org/doi/abs/10.1152/jn.1994.72.6.3004" target="_blank">Urge to scratch represented in the human cerebral cortex during itch</a>	</li>
+	</ul>
+	-->
+
+
+
+
 
 
 
