--- a/Talks.html
+++ b/Talks.html
@@ -34,6 +34,8 @@
     <h1> Talks </h1>
     <!--     x     -->
     <ol reversed>
+    <li> <b>Upcoming poster presentation at</b> <a href="https://conf.slac.stanford.edu/ssi2020/" target="_blank"> 48th SLAC Summer Institute</a>.</li>
+
     <li> The XXIX International Conference on Neutrino Physics and Astrophysics (Neutrino 2020,
 June-July 2020)
       <br>Chicago, Illinois USA (Online conference due to COVID-19)
