update useful links in Miscellaneous; create new htmls files: calligraphy; historicalsitesofChina

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -41,20 +41,63 @@
 
 	
 	<h3> Useful links </h3>
-	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>
+	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>  |  <a href="http://sanc.jinr.ru/users/zfitter/" target="_blank">ZFITTER</a>
+
+
 	
 	<h3> Dark matter related packages: </h3>
 	<a href="http://www.darksusy.org/" target="_blank">DarkSUSY</a>  |  <a href="https://lapth.cnrs.fr/micromegas/" target="_blank">MicrOMEGAs</a>  |  <a href="http://pisrv0.pit.physik.uni-tuebingen.de/darkmatter/" target="_blank">DAMNED</a>  |  <a href="http://dmtools.brown.edu/" target="_blank">DMTOOLS</a>  |  <a href="http://lpsc.in2p3.fr/mayet/dm.php" target="_blank">Dark Matter Portals</a>  |  <a href="http://www.taup-conference.to.infn.it/" target="_blank">TAUP</a>  |  <a href="https://indico.fnal.gov/event/13702/overview" target="_blank">US cosmic visions</a>
 
 	<h3> Python in HEP </h3>
 	<a href="https://indico.cern.ch/event/882824/overview" target="_blank">PyHEP</a>  |  <a href="https://www.scipy2020.scipy.org/schedule" target="_blank">SciPy2020</a>
-
+	
+	<h3> Collider tools </h3>
+	<a href="https://theory.sinp.msu.ru/~pukhov/calchep.html" target="_blank">CalcHEP</a>  |  <a href="https://theory.sinp.msu.ru/~semenov/lanhep.html" target="_blank">LanHEP</a>  |  <a href="http://madgraph.phys.ucl.ac.be/" target="_blank">MadGraph</a>
+	
 	<h3> Loop tools </h3>
 	<ul>
 	<li>Feynman Integral reduction tools:</li>
 	<a href="http://www.inp.nsk.su/~lee/programs/LiteRed/" target="_blank">LiteRed</a>  |  <a href="https://reduze.hepforge.org/" target="_blank">Reduze</a>  |  <a href="https://bitbucket.org/feynmanIntegrals/fire/src/master/" target="_blank">FIRE</a>  |  <a href="https://arxiv.org/pdf/hep-ph/0404258.pdf" target="_blank">AIR</a>  |  <a href="https://library.wolfram.com/infocenter/MathSource/606/" target="_blank">TARCER</a>
+
+	<li>Symbolic one-loop/Amp tools</li>
+	<a href="https://packagex.hepforge.org/" target="_blank">Package-X</a>  |  <a href="https://feyncalc.github.io/" target="_blank">FeynCalc</a>  |  <a href="http://www.feynarts.de/" target="_blank">FeynArts</a>  |  <a href="https://reduce-algebra.sourceforge.io/" target="_blank">REDUCE</a>  |  <a href="https://qcdloop.fnal.gov/" target="_blank">QCDloop</a>  |  
+
+
+
+	<li>Two-loop tools:</li>
+	<a href="https://www.niu.edu/spmartin/TSIL/" target="_blank">TSIL</a>  |  <a href="https://arxiv.org/pdf/hep-ph/9907431.pdf" target="_blank">ON-SHELL2</a>  |  <a href="https://arxiv.org/pdf/hep-ph/9905560.pdf" target="_blank">DIANA</a> <!--后两者比较小众 -->
+
+	<li>Numeric tools:</li>
+	<a href="https://collier.hepforge.org/" target="_blank">COLLIER</a>  |  <a href="https://secdec.readthedocs.io/en/stable/" target="_blank">PySecDec</a>  |  <a href="http://www.feynarts.de/looptools/" target="_blank">LoopTools</a>  |  <a href="https://gjvo.home.xs4all.nl/FF.html" target="_blank">FF</a>  |  <a href="https://packagex.hepforge.org/" target="_blank">CollierLink</a>  |  
+
+
+
+
+
+
+
+
+	<li>Bridges of different packages:</li>
+	<a href="https://arxiv.org/pdf/1611.06793.pdf" target="_blank">FeynHelpers</a>
+
 	</ul>
 
+
+	<h3> Neutrino packages </h3>
+	<a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="https://www.mpi-hd.mpg.de/personalhomes/globes/" target="_blank">GLoBES</a>  |  <a href="https://github.com/ThomasTram/lasagna_public" target="_blank">LASAGNA</a>  |  <a href="https://www.globesfit.org/index.html" target="_blank">GLoBESfit</a>  |  
+
+	<h3> EFT packages </h3>
+	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  
+
+
+
+
+
+	<!--
+	<h3> Chinese culture </h3>
+	<li>Enjoy the Chinese Calligraphy <a href="ChineseCalligraphy.html" target="_blank">here</a> (Including my own work)</li>
+	<li>Enjoy the Historical Sites of China <a href="HistoricalSitesOfChina.html" target="_blank">here</a> (My own work)</li>
+	-->
 
 
 
