--- a/CV.html
+++ b/CV.html
@@ -34,7 +34,7 @@
 
  	<br>
 
-  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a>.</p>
+  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: July 26, 2020).</p>
 
   
   <div>
