remove search box and add name on navigation bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
         <li><a class="#main" href="Miscellaneous.html">Miscellaneous</a></li>
-        <input type="text" placeholder="Search.." placeholder="Search..">
+        <li style="float:right"><a class="#main" href="index.html"> Yong Du</a></li>
+        <!-- <input type="text" placeholder="Search.." placeholder="Search.."> -->
         <!-- <input type="submit" value="search" placeholder="Search.."> -->
       </ul>
   </navbar>
@@ -58,6 +59,7 @@
   
     <!-- back to top button -->
     <script src="js/main.js"></script>
+
 
 </body>
 </html>
