--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -17,8 +17,9 @@
         <li><a class="#main" href="Publications.html">Publications</a></li>
         <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
         <li><a class="#main" href="Talks.html">Talks</a></li>
-        <li><a class="active" href="Miscellaneous.html">Miscellaneous</a></li>
-        <input type="text" placeholder="Search.." placeholder="Search..">
+		<li><a class="active" href="Miscellaneous.html">Miscellaneous</a></li>
+		<li style="float:right"><a class="#main" href="index.html"> Yong Du</a></li>
+        <!-- <input type="text" placeholder="Search.." placeholder="Search.."> -->
         <!-- <input type="submit" value="search" placeholder="Search.."> -->
       </ul>
   </navbar>
