--- a/Talks.html
+++ b/Talks.html
@@ -35,25 +35,27 @@
     <h1> Talks </h1>
     <!--     x     -->
     <ol reversed>
-    <li> <b>Upcoming poster presentation at</b> <a href="https://conf.slac.stanford.edu/ssi2020/" target="_blank"> 48th SLAC Summer Institute</a>.</li>
+    <li> SLAC Summer Institute 2020 (SSI 2020)
+      <br>SLAC, CA, USA (Online due to COVID-19)
+      <br>Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions
+</li>
 
     <li> The XXIX International Conference on Neutrino Physics and Astrophysics (Neutrino 2020,
 June-July 2020)
-      <br>Chicago, Illinois USA (Online conference due to COVID-19)
+      <br>Chicago, IL, USA (Online due to COVID-19)
       <br>Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions </li>
     <li> The Seventh Dark Matter@LHC 2020 Workshop (DM@LHC, June 2020)
-      <br>DESY, Hamburg, Germany (Online conference due to COVID-19)
+      <br>DESY, Hamburg, Germany (Online due to COVID-19)
       <br>Plenary talk: Probing the real triplet scalar dark matter at colliders </li>
     <li> The Seventh Workshop of the LHC LLP Community (LHC LLP, May 2020)
-      <br>CERN (Online conference due to COVID-19)
+      <br>CERN (Online due to COVID-19)
       <br>Plenary talk: Collider probes of real triplet scalar dark matter </li>
     <li> The Eighth Annual Large Hadron Collider Physics (LHCP2020, May 2020)
-      <br>International Conference Centre of Sorbonne Universite, Paris, France (Online conference due
-to COVID-19)
+      <br>International Conference Centre of Sorbonne Universite, Paris, France (Online due to COVID-19)
       <br>Theory poster presentation in the “Dark Sector BSM”: Collider probes of real triplet
 scalar dark matter </li>
     <li> Phenomenology 2020 Symposium (May 2020)
-      <br>University of Pittsburgh, PA, USA (Online conference due to COVID-19)
+      <br>University of Pittsburgh, PA, USA (Online due to COVID-19)
       <br>Parallel talk: Collider probes of real triplet scalar dark matter </li>
     <li> LoopFest XVIII (August 2019)
       <br>Fermilab, IL, USA
