update index and miscellaneous pages.

--- a/index.html
+++ b/index.html
@@ -38,16 +38,14 @@
 	</p>
 
 	<p>
-       I am currently a fifth year PhD student in physics at the <a
-	       href="https://www.physics.umass.edu/acfi/" target="_blank">
-       Amherst Center for Fundamental Interactions</a> at the University of Massachusetts-Amherst. My thesis advisor
+       I received my PhD degree in September 2020 at the University of Massachusetts-Amherst. My thesis advisor
        is <a href="http://people.umass.edu/mjrm/" target="_blank">Michael J. Ramsey-Musolf</a> and my academic advisor is
        <a href="https://www.physics.umass.edu/people/jennie-traschen"
        target="_blank">Jennie Traschen</a>.
  	</p>
 
 	<p>
-	I will work as a postdoc at the Institute of Theoretical Physics, Chinese Academy of Science <a href="http://www.itp.cas.cn/" target="_blank">[中文|</a><a href="http://english.itp.cas.cn/" target="_blank">English]</a> starting in 2020 fall.
+	I am currently a postdoc at the Institute of Theoretical Physics, Chinese Academy of Science <a href="http://www.itp.cas.cn/" target="_blank">[中文|</a><a href="http://english.itp.cas.cn/" target="_blank">English]</a>.
 	</p>
 
  	<br>
