add upcoming talk at Tsinghua

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -31,14 +31,6 @@
  	<br>
 	<br>
 
-    <!--     <h1> Poems I composed </h1>
-    <p> Occasionally, I compose poems. My favorite poets are <a href="https://en.wikipedia.org/wiki/Li_Qingzhao" target="_blank">Li Qingzhao</a>, <a href="https://en.wikipedia.org/wiki/Liu_Yong_(Song_dynasty)" target="_blank">Liu Yong</a>, <a href="https://en.wikipedia.org/wiki/Li_Yu_(Southern_Tang)" target="_blank"> Li Yu</a> and <a href="https://zh.wikipedia.org/wiki/%E6%99%8F%E5%87%A0%E9%81%93" target="_blank">Yan Jidao</a>.</p> -->
-    <!--     x     -->
-    <!--      <ol reversed> 
-      <li> </li>
-    </ol> -->
-
-    <!--     <h1> Happy family time </h1> -->
 
 * Not for completeness.
 	
@@ -73,12 +65,6 @@
 	<a href="https://collier.hepforge.org/" target="_blank">COLLIER</a>  |  <a href="https://secdec.readthedocs.io/en/stable/" target="_blank">PySecDec</a>  |  <a href="http://www.feynarts.de/looptools/" target="_blank">LoopTools</a>  |  <a href="https://gjvo.home.xs4all.nl/FF.html" target="_blank">FF</a>  |  <a href="https://packagex.hepforge.org/" target="_blank">CollierLink</a>  |  
 
 
-
-
-
-
-
-
 	<li>Bridges of different packages:</li>
 	<a href="https://arxiv.org/pdf/1611.06793.pdf" target="_blank">FeynHelpers</a>
 
@@ -86,7 +72,12 @@
 
 
 	<h3> Neutrino packages </h3>
-	<a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="https://www.mpi-hd.mpg.de/personalhomes/globes/" target="_blank">GLoBES</a>  |  <a href="https://github.com/ThomasTram/lasagna_public" target="_blank">LASAGNA</a>  |  <a href="https://www.globesfit.org/index.html" target="_blank">GLoBESfit</a>  |  
+	<a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="https://www.mpi-hd.mpg.de/personalhomes/globes/" target="_blank">GLoBES</a>  |  <a href="https://github.com/ThomasTram/lasagna_public" target="_blank">LASAGNA</a>  |  <a href="https://www.globesfit.org/index.html" target="_blank">GLoBESfit</a>  |  <a href="http://gna.pages.jinr.ru/gna/index.html" target="_blank">GNA</a>
+
+	<!--
+	<h3> Neutrino DIS experiments </h3>
+	<a href="https://www.nevis.columbia.edu/ccfr/index.html" target="_blank">CCFR</a>  |  <a href="https://www-e815.fnal.gov/" target="_blank">NuTeV</a>  |  -->
+ 
 
 	<h3> EFT packages </h3>
 	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  
