--- a/Talks.html
+++ b/Talks.html
@@ -35,7 +35,11 @@
     <h1> Talks </h1>
     <!--     x     -->
     <ol reversed>
-    <li> SLAC Summer Institute 2020 (SSI 2020)
+    <li><b>Upcoming:</b> The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
+      <br>Tsinghua University, Beijing, China (Online due to COVID-19)
+      <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
+</li>
+    <li> SLAC Summer Institute 2020 (SSI 2020, August 2020)
       <br>SLAC, CA, USA (Online due to COVID-19)
       <br>Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions
 </li>
