--- a/CV.html
+++ b/CV.html
@@ -35,15 +35,15 @@
 
  	<br>
 
-  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: July 26, 2020).</p>
+  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: November 2, 2020).</p>
 
   
   <div>
     <h1>Contact Information</h1>
     <!--     x     -->
-    <li>Phone:+1-413-475-8129</li>
+    <li>Phone:+86-135-2076-3954</li>
     <li>Email: <a href="mailto:yongdu@umass.edu">yongdu@umass.edu</a></li>
-    <li>Address: Department of Physics, 426 LGRT, University of Massachusetts-Amherst, Amherst, MA 01003, USA</li>
+    <li>Address: Institute of Theoretical Physics, Chinese Academy of Science, Beijing 100190, China, </li>
     <!--     x     -->
     <h1>Education</h1>
     <li>PhD Physics, University of Massachusetts-Amherst, 2015-2020</li>
