--- a/Talks.html
+++ b/Talks.html
@@ -35,7 +35,14 @@
     <h1> Talks </h1>
     <!--     x     -->
     <ol reversed>
+<!--
     <li><b>Upcoming:</b> The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
+      <br>Tsinghua University, Beijing, China (Online due to COVID-19)
+      <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
+</li>
+-->
+
+    <li>The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
       <br>Tsinghua University, Beijing, China (Online due to COVID-19)
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
@@ -63,10 +70,10 @@ scalar dark matter </li>
       <br>Parallel talk: Collider probes of real triplet scalar dark matter </li>
     <li> LoopFest XVIII (August 2019)
       <br>Fermilab, IL, USA
-      <br>Parallel talk: Two-loop fermionic contributions to polarized Moller scattering asymmetries </li>
+      <br>Plenary talk: Two-loop fermionic contributions to polarized Moller scattering asymmetries </li>
     <li> Opportunities at Future High Energy Colliders (June-July 2019)
       <br>IFT, Madrid, Spain
-      <br>Parallel talk: Type-II seesaw scalar triplet at a 100 TeV pp collider </li>
+      <br>Plenary talk: Type-II seesaw scalar triplet at a 100 TeV pp collider </li>
     <li> Phenomenology 2019 Symposium (May 2019)
       <br>University of Pittsburgh, PA, USA
       <br>Parallel talk: Type-II seesaw scalar triplet at a 100 TeV pp collider </li>
